const { MQClient, MessageProperties } = require('./index');

// é…ç½®ä¿¡æ¯
const config = {
    endpoint: 'http://rocketmq-cnaie069c174d7a1.rocketmq.volces.com:9876',
    accessKeyId: 'I4q3P1ZGEqzocp7Ar4e7VUTM',
    accessKeySecret: 'k5KKAYupmSNcOJdgqLW2wBd8',
    instanceId: 'rocketmq-cnaie069c174d7a1',
    grpcEndpoint: 'localhost:50051'
};

// ç”Ÿäº§è€…ç¤ºä¾‹
async function producerDemo() {
    console.log('ğŸš€ RocketMQç”Ÿäº§è€…ä½¿ç”¨ç¤ºä¾‹');
    console.log('='.repeat(40));

    try {
        const client = new MQClient(config);
        const topic = 'upload';
        const producer = await client.getProducer(config.instanceId, topic);

        console.log('âœ… ç”Ÿäº§è€…åˆ›å»ºæˆåŠŸ\n');

        // 1. å‘é€æ™®é€šæ¶ˆæ¯
        console.log('ğŸ“¤ å‘é€æ™®é€šæ¶ˆæ¯...');
        const orderData = {
            orderId: 'ORDER_' + Date.now(),
            userId: 'user123',
            productId: 'prod456',
            amount: 99.99,
            status: 'created'
        };

        let msgProps = new MessageProperties()
            .putProperty("orderId", orderData.orderId)
            .putProperty("userId", orderData.userId)
            .messageKey(orderData.orderId);

        const result1 = await producer.publishMessage(orderData, 'order', msgProps);
        console.log(`   âœ… è®¢å•æ¶ˆæ¯å‘é€æˆåŠŸ: ${result1.messageId}\n`);

        // 2. å‘é€é¡ºåºæ¶ˆæ¯ï¼ˆåŒä¸€ç”¨æˆ·çš„è®¢å•ä¿è¯é¡ºåºï¼‰
        console.log('ğŸ“Š å‘é€é¡ºåºæ¶ˆæ¯...');
        const orderUpdateData = {
            orderId: orderData.orderId,
            userId: orderData.userId,
            status: 'paid',
            timestamp: Date.now()
        };

        msgProps = new MessageProperties()
            .putProperty("orderId", orderUpdateData.orderId)
            .putProperty("action", "statusUpdate")
            .messageKey(orderUpdateData.orderId);

        const result2 = await producer.publishOrderedMessage(
            orderUpdateData,
            'order-update',
            msgProps,
            orderData.userId  // ä½¿ç”¨userIdä½œä¸ºåˆ†åŒºé”®ä¿è¯åŒä¸€ç”¨æˆ·è®¢å•é¡ºåº
        );
        console.log(`   âœ… è®¢å•æ›´æ–°æ¶ˆæ¯å‘é€æˆåŠŸ: ${result2.messageId}\n`);

        // 3. å‘é€å»¶è¿Ÿæ¶ˆæ¯æ¼”ç¤ºï¼ˆå­—èŠ‚äº‘ä»»æ„ç²¾åº¦å»¶è¿Ÿï¼‰
        console.log('â° å‘é€å»¶è¿Ÿæ¶ˆæ¯æ¼”ç¤º...');

        // 3.1 å­—èŠ‚äº‘ä»»æ„ç²¾åº¦å»¶è¿Ÿæ¶ˆæ¯ï¼ˆæ¨èæ–¹å¼ï¼‰
        console.log('   ğŸ“Œ æ–¹å¼1: ä»»æ„ç²¾åº¦å»¶è¿Ÿï¼ˆå­—èŠ‚äº‘2023å¹´2æœˆ21æ—¥åå®ä¾‹ï¼‰');
        const timeoutCheckData = {
            orderId: orderData.orderId,
            action: 'timeout-check',
            createTime: Date.now()
        };

        msgProps = new MessageProperties()
            .putProperty("orderId", timeoutCheckData.orderId)
            .putProperty("action", "timeoutCheck")
            .putProperty("delayType", "arbitrary-precision")
            .messageKey(`timeout_${timeoutCheckData.orderId}`);

        // ä½¿ç”¨ä»»æ„ç²¾åº¦å»¶è¿Ÿï¼š60ç§’åæŠ•é€’
        const deliverTime = Date.now() + 60 * 1000; // 60ç§’å
        const result3 = await producer.publishDelayMessage(
            timeoutCheckData,
            'timeout-check',
            msgProps,
            { startDeliverTime: deliverTime }  // ä½¿ç”¨ç²¾ç¡®æ—¶é—´æˆ³ï¼ˆæ¯«ç§’ï¼‰
        );
        console.log(`   âœ… ä»»æ„ç²¾åº¦å»¶è¿Ÿæ¶ˆæ¯å‘é€æˆåŠŸ: ${result3.messageId}`);
        console.log(`      å°†åœ¨ ${new Date(deliverTime).toLocaleString()} æŠ•é€’\n`);

        // 3.2 ä¼ ç»Ÿ18çº§å»¶è¿Ÿæ¶ˆæ¯ï¼ˆå…¼å®¹æ–¹å¼ï¼‰
        console.log('   ğŸ“Œ æ–¹å¼2: ä¼ ç»Ÿå»¶è¿Ÿç­‰çº§ï¼ˆå…¼å®¹è€ç‰ˆæœ¬ï¼‰');
        const legacyTimeoutData = {
            orderId: orderData.orderId,
            action: 'legacy-timeout-check',
            createTime: Date.now()
        };

        msgProps = new MessageProperties()
            .putProperty("orderId", legacyTimeoutData.orderId)
            .putProperty("action", "legacyTimeoutCheck")
            .putProperty("delayType", "level-based")
            .messageKey(`legacy_timeout_${legacyTimeoutData.orderId}`);

        // ä½¿ç”¨å»¶è¿Ÿç­‰çº§ï¼šçº§åˆ«10 = 10åˆ†é’Ÿ
        const result4 = await producer.publishDelayMessage(
            legacyTimeoutData,
            'legacy-timeout',
            msgProps,
            { delayTimeLevel: 10 }  // å»¶è¿Ÿç­‰çº§10 = 10åˆ†é’Ÿ
        );
        console.log(`   âœ… ä¼ ç»Ÿå»¶è¿Ÿæ¶ˆæ¯å‘é€æˆåŠŸ: ${result4.messageId}`);
        console.log(`      å»¶è¿Ÿç­‰çº§10 = 10åˆ†é’ŸåæŠ•é€’\n`);

        // 3.3 å®šæ—¶æ¶ˆæ¯æ¼”ç¤ºï¼ˆæŒ‡å®šå…·ä½“æ—¶é—´ï¼‰
        console.log('   ğŸ“Œ æ–¹å¼3: å®šæ—¶æ¶ˆæ¯ï¼ˆæŒ‡å®šå…·ä½“æŠ•é€’æ—¶é—´ï¼‰');
        const scheduledData = {
            orderId: orderData.orderId,
            action: 'scheduled-check',
            createTime: Date.now()
        };

        msgProps = new MessageProperties()
            .putProperty("orderId", scheduledData.orderId)
            .putProperty("action", "scheduledCheck")
            .putProperty("delayType", "scheduled")
            .messageKey(`scheduled_${scheduledData.orderId}`);

        // å®šæ—¶åˆ°ä»Šå¤©æ™šä¸Š23:59æŠ•é€’
        const tonight = new Date();
        tonight.setHours(23, 59, 0, 0);

        const result5 = await producer.publishDelayMessage(
            scheduledData,
            'scheduled-check',
            msgProps,
            { startDeliverTime: tonight.getTime() }
        );
        console.log(`   âœ… å®šæ—¶æ¶ˆæ¯å‘é€æˆåŠŸ: ${result5.messageId}`);
        console.log(`      å°†åœ¨ ${tonight.toLocaleString()} æŠ•é€’\n`);

        console.log('ğŸ‰ æ‰€æœ‰æ¶ˆæ¯å‘é€å®Œæˆï¼');

    } catch (error) {
        console.error('âŒ ç”Ÿäº§è€…ç¤ºä¾‹å¤±è´¥:', error.message);
    }
}

// æ¶ˆè´¹è€…ç¤ºä¾‹
async function consumerDemo() {
    console.log('ğŸ‘‚ RocketMQæ¶ˆè´¹è€…ä½¿ç”¨ç¤ºä¾‹');
    console.log('='.repeat(40));

    try {
        const client = new MQClient(config);
        const topic = 'upload';

        // ä½¿ç”¨é¢„å®šä¹‰çš„æ¶ˆè´¹è€…ç»„åï¼ˆå­—èŠ‚äº‘ä¸­é…ç½®çš„å›ºå®šç»„åï¼‰
        const consumerGroupId = 'GID_group';  // ä¿®æ”¹ä¸ºä½ åœ¨å­—èŠ‚äº‘ä¸­é¢„å®šä¹‰çš„ç»„å
        const consumer = await client.getConsumer(
            config.instanceId,
            topic,
            consumerGroupId,  // ä½¿ç”¨é¢„å®šä¹‰çš„æ¶ˆè´¹è€…ç»„å
            '*'  // æ¥æ”¶æ‰€æœ‰tag
        );

        console.log(`âœ… æ¶ˆè´¹è€…åˆ›å»ºæˆåŠŸï¼Œç»„å: ${consumerGroupId}`);
        console.log('ğŸ¯ å¼€å§‹ç›‘å¬æ¶ˆæ¯...');
        console.log('ğŸ’¡ æç¤º: ç°åœ¨æ”¯æŒCtrl+Cåé‡æ–°å¯åŠ¨ï¼Œæ— éœ€ç­‰å¾…!');
        console.log('');

        // ä¼˜é›…é€€å‡ºå¤„ç†
        let isShuttingDown = false;

        process.on('SIGINT', () => {
            if (!isShuttingDown) {
                isShuttingDown = true;
                console.log('\nğŸ›‘ æ”¶åˆ°é€€å‡ºä¿¡å·ï¼Œæ­£åœ¨ä¼˜é›…å…³é—­...');
                console.log('ğŸ’¡ æ¶ˆè´¹è€…èµ„æºå°†è‡ªåŠ¨æ¸…ç†ï¼Œå¯ä»¥ç«‹å³é‡å¯ï¼');
                process.exit(0);
            }
        });

        // æ³¨å†Œæ¶ˆæ¯å¤„ç†å™¨
        consumer.onMessage(async (message) => {
            try {
                const messageData = JSON.parse(message.body);
                const tag = message.tag;

                console.log(`ğŸ“¬ æ”¶åˆ°æ¶ˆæ¯ [${tag}]:`, {
                    messageId: message.messageId,
                    tag: tag,
                    timestamp: new Date(message.bornTimestamp).toLocaleString()
                });

                // æ ¹æ®ä¸åŒçš„tagå¤„ç†ä¸åŒçš„ä¸šåŠ¡é€»è¾‘
                switch (tag) {
                    case 'order':
                        await handleOrderMessage(messageData, message.properties);
                        break;
                    case 'order-update':
                        await handleOrderUpdateMessage(messageData, message.properties);
                        break;
                    case 'timeout-check':
                        await handleTimeoutCheckMessage(messageData, message.properties);
                        break;
                    case 'legacy-timeout':
                        await handleLegacyTimeoutMessage(messageData, message.properties);
                        break;
                    case 'scheduled-check':
                        await handleScheduledCheckMessage(messageData, message.properties);
                        break;
                    default:
                        console.log(`   âš ï¸  æœªçŸ¥æ¶ˆæ¯ç±»å‹: ${tag}`);
                }

                // ç¡®è®¤æ¶ˆæ¯å¤„ç†å®Œæˆ
                await consumer.ackMessage(message.receiptHandle);
                console.log(`   âœ… æ¶ˆæ¯å¤„ç†å®Œæˆ\n`);

            } catch (error) {
                console.error(`   âŒ æ¶ˆæ¯å¤„ç†å¤±è´¥: ${error.message}\n`);
                // åœ¨å®é™…åº”ç”¨ä¸­ï¼Œè¿™é‡Œå¯èƒ½éœ€è¦é‡è¯•æˆ–è€…å‘é€åˆ°æ­»ä¿¡é˜Ÿåˆ—
            }
        });

        const stream = consumer.startReceiving();

        console.log('ğŸ’¡ æ¶ˆè´¹è€…å·²å¯åŠ¨ï¼ŒæŒ‰ Ctrl+C åœæ­¢\n');

    } catch (error) {
        console.error('âŒ æ¶ˆè´¹è€…ç¤ºä¾‹å¤±è´¥:', error.message);
    }
}

// è®¢å•æ¶ˆæ¯å¤„ç†
async function handleOrderMessage(orderData, properties) {
    console.log(`   ğŸ›’ å¤„ç†è®¢å•åˆ›å»º: ${orderData.orderId}`);
    console.log(`      ç”¨æˆ·: ${orderData.userId}`);
    console.log(`      é‡‘é¢: Â¥${orderData.amount}`);

    // è¿™é‡Œæ˜¯å®é™…çš„ä¸šåŠ¡é€»è¾‘ï¼Œæ¯”å¦‚ï¼š
    // 1. ä¿å­˜è®¢å•åˆ°æ•°æ®åº“
    // 2. æ‰£å‡åº“å­˜
    // 3. å‘é€é€šçŸ¥ç­‰

    console.log(`   ğŸ“ è®¢å•å…¥åº“å®Œæˆ`);
}

// è®¢å•æ›´æ–°æ¶ˆæ¯å¤„ç†
async function handleOrderUpdateMessage(updateData, properties) {
    console.log(`   ğŸ”„ å¤„ç†è®¢å•çŠ¶æ€æ›´æ–°: ${updateData.orderId}`);
    console.log(`      æ–°çŠ¶æ€: ${updateData.status}`);

    // å®é™…ä¸šåŠ¡é€»è¾‘ï¼š
    // 1. æ›´æ–°è®¢å•çŠ¶æ€
    // 2. è§¦å‘åç»­æµç¨‹
    // 3. å‘é€ç”¨æˆ·é€šçŸ¥ç­‰

    console.log(`   ğŸ’« è®¢å•çŠ¶æ€æ›´æ–°å®Œæˆ`);
}

// è¶…æ—¶æ£€æŸ¥æ¶ˆæ¯å¤„ç†ï¼ˆä»»æ„ç²¾åº¦å»¶è¿Ÿï¼‰
async function handleTimeoutCheckMessage(checkData, properties) {
    console.log(`   â±ï¸  å¤„ç†è®¢å•è¶…æ—¶æ£€æŸ¥: ${checkData.orderId}`);
    console.log(`      å»¶è¿Ÿç±»å‹: ${properties.delayType || 'æœªçŸ¥'}`);
    console.log(`      æ£€æŸ¥åŠ¨ä½œ: ${checkData.action}`);

    // å®é™…ä¸šåŠ¡é€»è¾‘ï¼š
    // 1. æŸ¥è¯¢è®¢å•å½“å‰çŠ¶æ€
    // 2. å¦‚æœè¿˜æ˜¯æœªæ”¯ä»˜çŠ¶æ€ï¼Œåˆ™å–æ¶ˆè®¢å•
    // 3. é‡Šæ”¾åº“å­˜å’Œä¼˜æƒ åˆ¸ç­‰

    console.log(`   ğŸ” ä»»æ„ç²¾åº¦å»¶è¿Ÿæ£€æŸ¥å®Œæˆ`);
}

// ä¼ ç»Ÿå»¶è¿Ÿæ£€æŸ¥æ¶ˆæ¯å¤„ç†
async function handleLegacyTimeoutMessage(checkData, properties) {
    console.log(`   â° å¤„ç†ä¼ ç»Ÿå»¶è¿Ÿæ£€æŸ¥: ${checkData.orderId}`);
    console.log(`      å»¶è¿Ÿç±»å‹: ${properties.delayType || 'æœªçŸ¥'}`);
    console.log(`      æ£€æŸ¥åŠ¨ä½œ: ${checkData.action}`);

    // ä¼ ç»Ÿå»¶è¿Ÿç­‰çº§çš„ä¸šåŠ¡é€»è¾‘å¤„ç†
    console.log(`   ğŸ“Š ä¼ ç»Ÿå»¶è¿Ÿç­‰çº§æ£€æŸ¥å®Œæˆ`);
}

// å®šæ—¶æ£€æŸ¥æ¶ˆæ¯å¤„ç†
async function handleScheduledCheckMessage(checkData, properties) {
    console.log(`   ğŸ“… å¤„ç†å®šæ—¶æ£€æŸ¥: ${checkData.orderId}`);
    console.log(`      å»¶è¿Ÿç±»å‹: ${properties.delayType || 'æœªçŸ¥'}`);
    console.log(`      æ£€æŸ¥åŠ¨ä½œ: ${checkData.action}`);
    console.log(`      å½“å‰æ—¶é—´: ${new Date().toLocaleString()}`);

    // å®šæ—¶æ¶ˆæ¯çš„ä¸šåŠ¡é€»è¾‘å¤„ç†
    console.log(`   â° å®šæ—¶æ£€æŸ¥å®Œæˆ`);
}

// ä¸»å‡½æ•°
async function main() {
    const mode = process.argv[2];

    if (mode === 'producer') {
        await producerDemo();
    } else if (mode === 'consumer') {
        await consumerDemo();
    } else {
        console.log('ğŸ“š RocketMQä½¿ç”¨ç¤ºä¾‹');
        console.log('');
        console.log('ç”¨æ³•:');
        console.log('  node usage-demo.js producer   # è¿è¡Œç”Ÿäº§è€…ç¤ºä¾‹');
        console.log('  node usage-demo.js consumer   # è¿è¡Œæ¶ˆè´¹è€…ç¤ºä¾‹');
        console.log('');
        console.log('å»ºè®®ä½¿ç”¨é¡ºåº:');
        console.log('  1. å…ˆå¯åŠ¨æ¶ˆè´¹è€…: node usage-demo.js consumer');
        console.log('  2. å†è¿è¡Œç”Ÿäº§è€…: node usage-demo.js producer');
        console.log('');
        console.log('ğŸ’¡ è¿™ä¸ªç¤ºä¾‹å±•ç¤ºäº†ç”µå•†è®¢å•å¤„ç†çš„å®Œæ•´æµç¨‹ï¼š');
        console.log('   ğŸ“¦ è®¢å•åˆ›å»º â†’ çŠ¶æ€æ›´æ–° â†’ å»¶è¿Ÿ/å®šæ—¶æ£€æŸ¥');
        console.log('');
        console.log('ğŸ• å»¶è¿Ÿæ¶ˆæ¯ç±»å‹è¯´æ˜ï¼š');
        console.log('   1. ä»»æ„ç²¾åº¦å»¶è¿Ÿ - å­—èŠ‚äº‘2023å¹´2æœˆ21æ—¥åå®ä¾‹ï¼ˆæ¨èï¼‰');
        console.log('   2. ä¼ ç»Ÿ18çº§å»¶è¿Ÿ - å…¼å®¹è€ç‰ˆæœ¬RocketMQ');
        console.log('   3. å®šæ—¶æ¶ˆæ¯ - æŒ‡å®šå…·ä½“æŠ•é€’æ—¶é—´');
        console.log('');
        console.log('ğŸ“‹ å»¶è¿Ÿç­‰çº§å‚è€ƒï¼ˆä¼ ç»Ÿæ–¹å¼ï¼‰ï¼š');
        console.log('   1s 5s 10s 30s 1m 2m 3m 4m 5m 6m 7m 8m 9m 10m 20m 30m 1h 2h');
    }
}

main().catch(console.error); 